# fido-u2f-playground

./: .gitignore  docker-compose.yml
api/: .gitignore  Cargo.toml  Dockerfile  Rocket.toml  gen_cert.sh
api/migrations/2019-08-04-142329_create_users/: up.sql
api/migrations/2019-08-04-143035_create_articles/: down.sql
api/migrations/2019-08-04-143655_create_favorites/: up.sql
api/migrations/2019-08-04-143934_create_follows/: up.sql
api/migrations/2019-08-04-144149_create_comments/: up.sql
api/migrations/2019-08-05-061646_update_user_bio/: down.sql  up.sql
api/src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  managed.rs
api/src/db/: profiles.rs  users.rs
api/src/models/: mod.rs  user.rs
api/src/routes/: articles.rs  misc.rs  mod.rs  users.rs
web/: Dockerfile  index.html  index.js  index.ts  nginx.conf  package.json  tsconfig.json  webpack.config.js
web/src/: App.tsx  App.vue
web/src/Button/: Button.tsx  styles.css
web/src/components/Base/Button/: Button.tsx  styles.css
web/src/components/Base/Input/: Input.tsx  styles.css
web/src/components/Modules/Form/FormBlock/: FormBlock.tsx  index.ts  styles.css  styles.css.d.ts
web/src/components/Modules/Form/FormWrapper/: FormWrapper.tsx  styles.css  styles.css.d.ts
web/src/infra/network/: APIClient.ts
web/src/infra/network/requests/: index.ts
web/src/types/: server.ts
